# avx-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  QUICK_REFERENCE.md  README.md  README.pt-BR.md  SUMMARY.md
.github/workflows/: ci.yml  docker.yml  release.yml
avx-cli/: Cargo.toml  README.md
avx-cli/src/: main.rs
avx-config/: Cargo.toml
avx-config/src/: lib.rs
avx-mcp/: Cargo.toml  README.md
avx-mcp/src/: lib.rs  main.rs  server.rs
avx-mcp/src/protocol/: types.rs
avx-mcp/src/resources/: aviladb.rs  avx_config.rs  cluster.rs  mod.rs
avx-mcp/src/tools/: aviladb_query.rs  deploy.rs  mod.rs  telemetry.rs
docs/: ARCHITECTURE.md  CLAUDE_DESKTOP_CONFIG.md  PUBLISHING.md  PUBLISHING_CRATES_IO.md
examples/: USAGE_EXAMPLES.md  claude_desktop_config.json
