[workspace]
members = ["avx-cli", "avx-mcp", "avx-config"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Nícolas Ávila <nicolas@avila.inc>",
    "Avila Development Team <dev@avila.inc>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/avilaops/arxis"
homepage = "https://arxis.avilaops.com"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
