[package]
name = "avx-cli"
version = "0.1.0"
edition = "2021"
authors = [
    "Nícolas Ávila <nicolas@avila.inc>",
    "Avila Development Team <dev@avila.inc>",
]
license = "MIT OR Apache-2.0"
description = "Command-line tools for Avila Experience Fabric - Project management, deployment, monitoring"
repository = "https://github.com/avilaops/arxis"
homepage = "https://arxis.avilaops.com"
documentation = "https://docs.rs/avx-cli"
readme = "README.md"
keywords = ["cli", "command-line", "tools", "deployment", "devops"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["target/", "*.swp", ".git*"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
avx-config = { path = "../avx-config" }
avx-mcp = { path = "../avx-mcp" }
