[package]
name = "avx-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model Context Protocol server for Avila Experience Fabric"
keywords = ["mcp", "protocol", "ai", "llm", "avx"]
categories = ["api-bindings", "development-tools"]

[[bin]]
name = "avx-mcp"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
avx-config = { path = "../avx-config" }

[lib]
name = "avx_mcp"
path = "src/lib.rs"
